[package]
name = "member-org"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-sheets4 = "*"
hyper = "^0.14"
hyper-rustls = { version = "^0.23", features = ["tls12"] }
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = { version = "7.0", features = ["service_account"] }
tokio = { version = "~1.2", features = [
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
    "fs",
  ] }
clap = { version = "*", features = ["derive"] }
